# Heimdall---System-Monitor

./: README.md  pyproject.toml
src/heimdall/: cpu.py  disk.py  main.py  memory.py  network.py  process.py  tui.py  ù
