[project]
name = "heimdall-system-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.15.0",
    "psutil>=7.2.2",
    "rich>=14.3.3",
    "textual>=8.2.0",
]

[project.scripts]
heimdall = "heimdall.main:main"

[tool.uv]
package = true
